<resources>
    <string name="app_name">Sistem Pakar Anggur</string>
    <string name="logo_aplikasi">LOGO APLIKASI</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="register_here">Register here</string>
    <string name="login_here">Login here</string>
    <string name="teks_dummy_keterangan">Deskripsi anda disini, isi banyak ya bafdlkfsldkgksgklsgnklsgnklgfndkgndfkngkdnvwtjiwvthjivhtierwtiru</string>
    <string name="btn_text_tambah_gejala">Tambah Gejala</string>
    <string name="btn_text_edit_diagnosa">Update Diagnosa</string>
    <string name="author">By : Tutus Dwiyantoro</string>
    <string name="btn_text_tambahkan_gejala">TAMBAHKAN GEJALA</string>
    <string name="btn_text_daftar_diagnosa">Daftar Diagnosa</string>
    <string name="btn_text_konsultasi">Konsultasi</string>
    <string name="label_keterangan_diagnosa">KETERANGAN</string>
    <string name="label_judul_diagnosa">JUDUL DIAGNOSA</string>
    <string name="btn_text_submit">SUBMIT</string>
    <string name="btn_text_logout">LOGOUT</string>
    <string name="label_kode_diagnosa">Kode Diagnosa</string>
    <string name="text_dummy_solusi">: solusi disini</string>
    <string name="label_solusi">Solusi \t\t:</string>
    <string name="label_kepercayaan">Kepercayaan \t\t:</string>
    <string name="about_judul">Sistem Pakar Metode Certainty Factor (CF)</string>
    <string name="about_isi">Sistem pakar metode Certainty Factor. Studi kasus: mendiagnosa penyakit pada tanaman anggur. Aplikasi ini adalah dibuat untuk membantu para masyarakat juga petani dalan mendiagnosa atau mengidentefikasi penyakit yang menyerang dan terinfeksi. Sitem ini dibuat dengan Metode Certainty Factor.</string>
    <string name="btn_text_about">TENTANG</string>
</resources>
