<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="dev.anggur.sistempakaranggur.activity.TambahDiagnosaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:text="@string/label_kode_diagnosa"
        android:labelFor="@id/edt_kode_diagnosa"/>
    <EditText
        android:id="@+id/edt_kode_diagnosa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:inputType="textCapCharacters"
        android:gravity="top"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:text="@string/label_judul_diagnosa"
        android:labelFor="@id/edt_judul_diagnosa"/>
    <EditText
        android:id="@+id/edt_judul_diagnosa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="14sp"
        android:inputType="textCapWords|textMultiLine"
        android:gravity="top"
        android:layout_marginBottom="20dp"
        android:background="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:text="@string/label_keterangan_diagnosa"
        android:labelFor="@id/edt_keterangan_diagnosa"/>
    <EditText
        android:id="@+id/edt_keterangan_diagnosa"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="14sp"
        android:gravity="top"
        android:layout_marginBottom="20dp"
        android:inputType="text|textMultiLine"
        android:background="@android:color/white"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/btn_text_submit"/>
</LinearLayout>
